src/test/contracts/negative/deep_pattern_matching/pm_fail16.religo

type parameter = { one : int , two : int };

let main = (action : parameter) : int =>
  switch(action) {
  | {one : _ , three : _} => 0
  }